--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codeblock.css",
-  "version": "1.1.0",
-  "description": "263 bytes to make pretty code blocks using only CSS. Much like Prettier but without any highlighting.",
+  "version": "1.1.1",
+  "description": "263 bytes to make pretty code blocks using only CSS. Much like Prism.js but without any highlighting.",
   "main": "codeblock.min.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
